Import Issues Due To Resolving Conflicts on Previous PR#19 Fixed Scrollbar Issue

--- a/src/templates/Gamehub-01/Gamehub.css
+++ b/src/templates/Gamehub-01/Gamehub.css
@@ -52,3 +52,7 @@
 .Popular-repacks { grid-row: 1; } /* First row */
 .New-Games { grid-row: 2; } /* Second row */
 .Recently-Updated { grid-row: 3; } /* Third row */
+
+.gamehub-container::-webkit-scrollbar {
+    display: none
+}
